# YoYo

./: .gitignore  CLAUDE.md  LICENSE  dev.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/plans/: 2026-03-07-obsidian-implementation.md  2026-03-07-obsidian-integration-design.md  2026-03-08-session-mode-design.md  2026-03-08-session-mode-implementation.md  2026-03-11-scene-sessions-design.md
src/: App.tsx  BubbleApp.tsx  SettingsApp.tsx  SpeechBubble.tsx  TrayApp.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  ai_engine.rs  commands.rs  focus_capture.rs  frame_diff.rs  lib.rs  main.rs  obsidian.rs  ocr.rs  screen_context.rs  screenshot.rs  speech.rs  user_data.rs  window_list.rs  window_monitor.rs
src-tauri/src/commands/: actions.rs  activity.rs  analysis.rs  audio.rs  intent.rs  knowledge.rs  mod.rs  onboarding.rs  settings.rs  workflow.rs
src-tauri/swift/: accessibility.swift  focus_capture.swift  ocr.swift  speech.swift  window_list.swift
src/components/: ActionButtons.tsx  ChatView.tsx  ContextDisplay.tsx  HistoryPanel.tsx  OnboardingPanel.tsx  QuestBoard.tsx  SettingsPanel.tsx  StatusIndicator.tsx  TaskBar.tsx  TaskList.tsx
src/hooks/: useActions.ts  useScreenContext.ts  useTasks.ts  useWindowAutoResize.ts
src/services/: actions.ts  ai.ts  onboarding.ts  sessions.ts  storage.ts  userdata.ts
src/styles/: index.css
src/test/: BubbleApp.test.tsx  setup.ts
src/types/: index.ts
